DE11230: Fixes for IE no-ads issue and slow collapsing of no-ad divs cross-browser
Fix for IE no-ads not collapsing

--- a/main/css/ft/advertising-gpt.css
+++ b/main/css/ft/advertising-gpt.css
@@ -43,5 +43,5 @@
 }
 .msie .no-banlbGPT div.topAds { display:none ; } /* Fix for non-clickable header contents in IE6 when banlb collapses */
 
-#banlbGPT    { height:90px ; text-align:center ; min-height:90px;}
-.fullwidth-banlb #banlbGPT    { height:auto}
+#banlbGPT    {min-height:90px;font-size: 0; line-height: 0}
+
